objects/Feedback__c.object
<CustomObject>
    <description>SDFC-4199- The sales team wants to capture the feedback of the end customer (decision-makers) at the time or after negotiating an opportunity.</description>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <description>SFDC-4199 Business line fetched from opportunity</description>
        <label>Business Line</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4199 Opportunity Contract</description>
        <inlineHelpText>Associated Contract</inlineHelpText>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4199 Linked feeback with opportunity&apos;s Account</description>
        <inlineHelpText>Account Name of the Opportunity</inlineHelpText>
        <label>Customer Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>SFDC-4199  The name and company of the person who raised the case (internal member of IHS Markit)</description>
        <inlineHelpText>Email Id of a person who has raised the case</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FeedbackSummary__c</fullName>
        <description>SFDC-4199 Capture feedback</description>
        <label>Feedback Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IssueType__c</fullName>
        <description>SFDC-4199</description>
        <inlineHelpText>IssueType</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Feature</fullName>
                </value>
                <value>
                    <fullName>Improvement</fullName>
                </value>
                <value>
                    <fullName>Requirement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityNum__c</fullName>
        <formula>Opportunity__r.Opportunitynum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordType__c</fullName>
        <formula>Opportunity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4199 Link opportunity with the feedback</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginatingFeedback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-4199</description>
        <label>Originating Feedback</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Feedback__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>Feedback__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipLabel>Child Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>SFDC-4199 Product groups from Opportunity</description>
        <inlineHelpText>Product groups from Opportunity</inlineHelpText>
        <label>Product Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevenueAtRisk__c</fullName>
        <formula>Opportunity__r.TotalEstimatedValueAtRisk__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue at Risk</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>IssueType__c</columns>
        <columns>Status__c</columns>
        <columns>FeedbackSummary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PricingValuationsandReferenceCompleted</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>CustomerLegalEntity__c</columns>
        <columns>IssueType__c</columns>
        <columns>OpportunityNum__c</columns>
        <columns>RevenueAtRisk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>PV and Reference - Completed</label>
    </listViews>
    <listViews>
        <fullName>PricingValuationsandReferenceInprog</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>CustomerLegalEntity__c</columns>
        <columns>IssueType__c</columns>
        <columns>OpportunityNum__c</columns>
        <columns>RevenueAtRisk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>PV and Reference - In Progress</label>
    </listViews>
    <listViews>
        <fullName>PricingValuationsandReferenceNew</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>CustomerLegalEntity__c</columns>
        <columns>IssueType__c</columns>
        <columns>OpportunityNum__c</columns>
        <columns>RevenueAtRisk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>PV and Reference - New</label>
    </listViews>
    <listViews>
        <fullName>PricingValuationsandReferenceRejected</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>CustomerLegalEntity__c</columns>
        <columns>IssueType__c</columns>
        <columns>OpportunityNum__c</columns>
        <columns>RevenueAtRisk__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>PV and Reference - Rejected</label>
    </listViews>
    <listViews>
        <fullName>PricingValuationsandReference_Feedback</fullName>
        <filterScope>Queue</filterScope>
        <label>Pricing Valuations and Reference</label>
        <queue>PricingValuationsandReference</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>